--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -39,7 +39,9 @@ block content
               details.descrip__details(open)
                 +summary('descrip__summary')
                 .descrip__txt
-                    p Запросы бизнеса разнообразны, никогда не знаешь, с чем компания столкнется завтра, а только комплексный подход к планированию и учету позволяет снизить налоговую нагрузку за счет грамотной оптимизации налогообложения. Полностью знать нюансы того или иного вопроса может только опытный и высококвалифицированный специалист, содержание которого в штате может быть нерентабельно. Мы обслуживаем различные сферы деятельности, поэтому в штат нашей компании входят высококвалифицированные бухгалтера, причем не только универсалы, которые чаще обычных бухгалтеров сталкиваются с нестандартными ситуациями, но и специалисты узкого профиля – досконально знающие все тонкости конкретного направления. Объемная экспертная поддержка позволяет нам осуществлять всю работу, связанную с бухгалтерским обслуживанием, максимально быстро, но без ущерба для качества.
+                  p Запросы бизнеса разнообразны, никогда не знаешь, с чем компания столкнется завтра, а только комплексный подход к планированию и учету позволяет снизить налоговую нагрузку за счет грамотной оптимизации налогообложения.
+                  p Полностью знать нюансы того или иного вопроса может только опытный и высококвалифицированный специалист, содержание которого в штате может быть нерентабельно. Мы обслуживаем различные сферы деятельности, поэтому в штат нашей компании входят высококвалифицированные бухгалтера, причем не только универсалы, которые чаще обычных бухгалтеров сталкиваются с нестандартными ситуациями, но и специалисты узкого профиля – досконально знающие все тонкости конкретного направления.
+                  p Объемная экспертная поддержка позволяет нам осуществлять всю работу, связанную с бухгалтерским обслуживанием, максимально быстро, но без ущерба для качества.
           .swiper-pagination
 
     //Provider
