--- a/src/css/common/global.scss
+++ b/src/css/common/global.scss
@@ -159,6 +159,10 @@ body {
   width: 100%;
   margin: 0 auto;
   padding: 0 15px;
+
+  &--paddingless {
+    padding: 0;
+  }
 }
 
 .page {
@@ -217,65 +221,9 @@ body {
 .element-fade {
   opacity: 0;
 
-  // &:nth-child(1) {
-  //   transition-delay: 0s;
-  // }
-
-  // &:nth-child(2) {
-  //   transition-delay: 0.5s;
-  // }
-
-  // &:nth-child(3) {
-  //   transition-delay: 1s;
-  // }
-
-  // &:nth-child(4) {
-  //   transition-delay: 1.5s;
-  // }
-
   &.show {
     opacity: 1;
 
     transition: opacity 0.5s linear;
   }
-
-  // @include media-tablet-lg {
-  //   transition: opacity 0.2s linear;
-
-  //   &:nth-child(1) {
-  //     transition-delay: 0.2s;
-  //   }
-
-  //   &:nth-child(2) {
-  //     transition-delay: 0.4s;
-  //   }
-
-  //   &:nth-child(3) {
-  //     transition-delay: 0.2s;
-  //   }
-
-  //   &:nth-child(4) {
-  //     transition-delay: 0.4s;
-  //   }
-  // }
-
-  // @include media-smartphone-sm {
-  //   transition: opacity 0.1s linear;
-
-  //   &:nth-child(1) {
-  //     transition-delay: 0s;
-  //   }
-
-  //   &:nth-child(2) {
-  //     transition-delay: 0s;
-  //   }
-
-  //   &:nth-child(3) {
-  //     transition-delay: 0s;
-  //   }
-
-  //   &:nth-child(4) {
-  //     transition-delay: 0s;
-  //   }
-  // }
 }
