--- a/src/css/pages/service-onetime/faces.scss
+++ b/src/css/pages/service-onetime/faces.scss
@@ -28,7 +28,7 @@
     @include media-laptop {
       width: 48%;
 
-      padding-right: 5rem;
+      padding: 2.4rem 5rem 2.4rem 10rem;
     }
 
     @include media-tablet-lg {
@@ -38,15 +38,21 @@
 }
 
 .onetime__faces-content {
-  p {
-    font-size: 1.8rem;
-    line-height: 1.5;
-  }
+  width: 100%;
+}
 
-  a {
-    font-size: 14px;
-    color: $color-primary-alpha;
-    border-bottom: 1px dashed $color-primary-alpha;
+.onetime__faces-title {
+  font-size: 1.8rem;
+  line-height: 1.5;
+}
+
+.onetime__faces-link {
+  font-size: 14px;
+  color: $color-primary-alpha;
+  border-bottom: 1px dashed $color-primary-alpha;
+
+  @include media-tablet-lg {
+    display: none;
   }
 }
 
@@ -57,4 +63,20 @@
 
   width: 100px;
   height: 80px;
+}
+
+.onetime__details {
+  &[open] {
+    .onetime__summary {
+      &-icon {
+        transform: rotate(90deg);
+      }
+    }
+  }
+}
+
+.onetime__summary {
+  @include details-summary;
+
+  text-align: left;
 }
