fix: service-onetime spoiler label on resize

--- a/src/css/pages/service-onetime/fee.scss
+++ b/src/css/pages/service-onetime/fee.scss
@@ -47,11 +47,13 @@
 
   margin-right: 1rem;
 
+  padding: 5px;
+
   text-align: center;
   font-weight: 500;
   color: $color-primary-alpha;
 
-  transition: transform 0.15s linear;
+  transition: transform 0.1s linear;
 
   &:hover {
     transform: translateY(2px);
