--- a/src/css/common/burger.scss
+++ b/src/css/common/burger.scss
@@ -1,5 +1,6 @@
 .burger {
-  position: relative;
+  align-items: center;
+  justify-content: center;
 
   display: none;
 
@@ -8,25 +9,25 @@
 
   @include media-tablet-sm {
     display: flex;
-    align-items: center;
-    justify-content: center;
   }
 
   span {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  span,
-  span::before,
-  span::after {
-    position: absolute;
+    position: relative;
 
     width: 25px;
     height: 2px;
 
     background-color: $color-primary-gamma;
+  }
+
+  span::before,
+  span::after {
+    position: absolute;
+
+    width: 100%;
+    height: 2px;
+
+    background-color: inherit;
   }
 
   span {
