fix: spoiler scroll into view

--- a/src/css/index/descrip.scss
+++ b/src/css/index/descrip.scss
@@ -10,9 +10,11 @@
   }
 
   .callback--intro {
-    display: block;
-
     margin: 0 auto 50px;
+
+    &.active {
+      display: block;
+    }
   }
 }
 
