--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -84,7 +84,7 @@ block content
           +feeItem('service-complex', 'fee-1.jpg', '01', 'Комплексное бухгалтерское обслуживание')
           +feeItem('service-onetime', 'fee-2.jpg', '02', 'Налоговое консультирование и разовые услуги')
           +feeItem('service-repair', 'fee-3.jpg', '03', 'Восстановление бухгалтерского и налогового учета')
-          +feeItem('service-law', 'fee-4.jpg', '04', 'Юридические услуги, кадровый учет')
+          +feeItem('service-law', 'fee-4.jpg', '04', 'Юридические услуги, кадровый учет', 'на правах рекламы')
         .swiper-pagination
 
     //Consult
