--- a/src/css/index/fee.scss
+++ b/src/css/index/fee.scss
@@ -16,7 +16,11 @@
 }
 
 .fee__link {
+  position: relative;
+
   width: 100%;
+
+  // z-index: 2;
 
   color: $color-primary-gamma;
 
@@ -120,4 +124,32 @@
   font-size: 2.2rem;
   line-height: 1.4;
   font-family: $font-secondary;
+}
+
+.fee__disclaimer {
+  position: absolute;
+
+  z-index: 1;
+
+  top: 35px;
+  left: 35px;
+
+  font-size: 16px;
+  color: #000;
+
+  &::before {
+    content: '';
+
+    display: inline-block;
+
+    width: 5px;
+    height: 5px;
+
+    margin-right: 10px;
+    vertical-align: middle;
+
+    border-radius: 50%;
+
+    background: #000;
+  }
 }
