--- a/src/pages/service-onetime.pug
+++ b/src/pages/service-onetime.pug
@@ -23,7 +23,7 @@ block content
             {icon: 'individual', txt: 'Физическим лицам', link: '#individual', id: 'onetime-details-individ'}
           ])
           .onetime__wrapper
-            +onetimeCallback('Выберите услугу или свяжитесь с нами', 'Мы ответим на все ваши вопросы и подготовим необходимое решение')
+            +onetimeCallback('Выберите услугу или свяжитесь с нами', 'Мы ответим на все ваши вопросы и подготовим необходимое решение', 'onetime-callback')
             #service-onetime-legal.onetime__block
               +onetimeInfo('Разовые бухгалтерские услуги и отчетность для юридических лиц и индивидуальных предпринимателей',['Вести бухгалтерский учёт обязаны все юридические лица вне зависимости от размера бизнеса и организационно-правовой формы и индивидуальные предприниматели. Зачастую небольшим предприятиям невыгодно содержать постоянного бухгалтера в штате – для него просто нет ежедневной работы. Оптимальный выход в такой ситуации – разовые бухгалтерские услуги, оказываемые специализированной компанией.', 'Заказав разовые бухгалтерские услуги в ООО «ОлдТраффорд», Вы получаете квалифицированного бухгалтера, который будет работать с вашей компанией только тогда, когда это необходимо. Но при этом вы можете быть уверены в полном соответствии бухгалтерского учёта и отчётности в вашей организации всем требованиям законодательства Республики Беларусь.'], true, 'legal')
               .onetime__service-list
