--- a/src/pages/includes/index/mixins.pug
+++ b/src/pages/includes/index/mixins.pug
@@ -29,7 +29,7 @@ mixin descripItem(arrTitle, icon, arrTxt, arrList)
 mixin providerItem(txt)
   li.provider__item.swiper-slide
     .provider__icon
-      <svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 17.1 16.9" style="enable-background:new 0 0 17.1 16.9;" xml:space="preserve">
+      <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 17.1 16.9" style="enable-background:new 0 0 17.1 16.9;" xml:space="preserve">
       <path class="st0" d="M7,16.1c0.5,0.5,1.7,0.4,1.8-0.5c0.8-5.1,4.6-9.4,7.6-13.5C17.2,1,15.3-0.1,14.5,1c-2.7,3.7-6,7.6-7.4,12.1 c-1.5-1.5-3-3.1-4.7-4.4c-1.1-0.9-2.6,0.7-1.5,1.5C3.1,12,5,14.1,7,16.1z"/>
       </svg>
     p.provider__txt= txt
