--- a/src/pages/includes/common/mixins.pug
+++ b/src/pages/includes/common/mixins.pug
@@ -66,7 +66,7 @@ mixin callbackBtnFixed
 mixin consult(title, subtitle, modif= null)
   .container(class= modif)
     section.consult
-      img.consult__img(src="images/common/phone.png", alt="")
+      img.consult__img.lozad(data-src="images/common/phone.png", alt="")
       .consult__info
         h2.consult__title= title
         h3.consult__subtitle= subtitle
