--- a/src/pages/includes/fanzone/mixins.pug
+++ b/src/pages/includes/fanzone/mixins.pug
@@ -2,7 +2,7 @@ mixin fanzoneItem(arrImg, title, arrInfo)
   li.fanzone__item
     .fanzone__item-images
       for img in arrImg
-        img.fanzone__item-img(src=`images/fanzone/${img}.png`, alt="")
+        img.fanzone__item-img.lozad(data-src=`images/fanzone/${img}.png`, alt="")
     h4.fanzone__item-title= title
     for info in arrInfo
       .fanzone__item-info
