--- a/src/pages/fanzone.pug
+++ b/src/pages/fanzone.pug
@@ -13,7 +13,7 @@ block content
     //Funzone
     section.fanzone
       +titlePage('Manchester United Fanzone', true)
-      img.fanzone__img.container(src="images/fanzone/stadium.jpg", alt="")
+      img.fanzone__img.lozad.container(data-src="images/fanzone/stadium.jpg", alt="")
       .fanzone__txt.container
         p
           span Многие клиенты задаются вопросом, почему наша компания называется  «ОлдТраффорд».  Ответ прост, мы любим футбол и болеем за самый лучший в мире футбольный клуб Manchester United!
@@ -22,7 +22,7 @@ block content
       .fanzone__clubs
         h3.fanzone__title Фан-клубы в беларуси
         .fanzone__inner
-          img.fanzone__footballer-img.fanzone__footballer-img--left(src="images/fanzone/footballer-1.png", alt="")
+          img.fanzone__footballer-img.lozad.fanzone__footballer-img--left(data-src="images/fanzone/footballer-1.png", alt="")
           ul.fanzone__list
             +fanzoneItem(['minsk-reds', 'red-army'], 'Минск', [
               {name: 'Владимир', phone: '+375 29 637-06-14', phoneSpaceless: '+375296370614'},
@@ -43,7 +43,7 @@ block content
             +fanzoneItem(['mogilev-reds'], 'Могилёв', [
               {name: 'Денис', phone: '+375 29 528-62-61', phoneSpaceless: '+375295286261'},
               ])
-          img.fanzone__footballer-img.fanzone__footballer-img--right(src="images/fanzone/footballer-2.png", alt="")
+          img.fanzone__footballer-img.lozad.fanzone__footballer-img--right(data-src="images/fanzone/footballer-2.png", alt="")
       .fanzone__txt.container
         p Не важно,  хотите ли Вы заключить договор на бухгалтерское обслуживание,  получить разовую услугу, просто проконсультироваться или болеете за другой футбольный клуб, мы – профессионалы и ценим каждого клиента как первого, поэтому  все они знают, что мы сделаем все, чтобы их бизнес достиг успеха, постоянного роста и процветания.
         p А если Вы являетесь официальным членом фан-клуба Manchester United  (Official Membership) мы обязательно предоставим Вам дополнительную скидку.
