--- a/src/pages/service-complex.pug
+++ b/src/pages/service-complex.pug
@@ -40,7 +40,7 @@ block content
                   {txt: 'Представление интересов клиента перед налоговыми (надзорными) органами'},
               ], 'borderless')
             .complex__cost
-              img.complex__img.lozad(data-src="images/service-complex/mockup.png" alt="")
+              img.complex__img.lozad(data-src="images/service-complex/mockup.png" width="360" height="460" alt="")
               .complex__callback
                 h4.complex__callback-title Рассчитать стоимость обслуживания?
                 p.complex__callback-txt Мы ответим на все ваши вопросы и подготовим необходимое решение
