feat: add map placeholder

--- a/src/pages/contacts.pug
+++ b/src/pages/contacts.pug
@@ -46,7 +46,7 @@ block content
               p Профессиональная ответственность застрахована в ЗАСО &laquo;Промтрансинвест&raquo;.
               p Страховой полис серии ПЕ № 0533493 от 04.03.2021 г.
       .map
-        #map.map__wrapper
+        #map.map__wrapper.lozad(data-background-image='images/common/map.png')
 
     //Form
     section.contacts-form.container
