--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -173,4 +173,4 @@ block content
             h3.map__item-title Адрес:
             +location(false, true)
           a.map__link(href="contacts.html") Подробнее
-      #map.map__wrapper
+      #map.map__wrapper.lozad(data-background-image='images/common/map.png')
