--- a/src/css/common/map.scss
+++ b/src/css/common/map.scss
@@ -44,6 +44,10 @@
   left: 0;
   right: 0;
   bottom: 0;
+
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .map__info {
