feat: add sweet alert

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -15,6 +15,7 @@
 @import 'common/burger';
 @import 'common/swiper';
 @import 'common/map';
+@import 'common/swal';
 @import 'common/includes/form';
 @import 'common/includes/callback';
 @import 'common/includes/consult';
