--- a/src/pages/includes/service-repair/mixins.pug
+++ b/src/pages/includes/service-repair/mixins.pug
@@ -1,4 +1,4 @@
 mixin repairReasonsItem(img, txt)
   li.repair__reasons-item
-    img.repair__reasons-item-img(src=`images/service-repair/${img}`, alt="")
+    img.repair__reasons-item-img.lozad(data-src=`images/service-repair/${img}`, alt="")
     p.repair__reasons-item-txt= txt
