--- a/src/css/index/clients.scss
+++ b/src/css/index/clients.scss
@@ -15,9 +15,9 @@
 }
 
 .clients__item {
+  position: relative;
+
   padding: 0 1rem;
-  max-width: 100%;
-  width: auto;
 
   @include media-tablet-lg {
     align-items: center;
@@ -27,16 +27,23 @@
 }
 
 .clients__link {
-  border-radius: 10px;
-  padding: 10px;
+  position: absolute;
+
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
 
   transition: box-shadow 0.1s linear;
-
-  &:hover {
-    box-shadow: 0px 4px 25px rgba(0, 0, 0, 0.07);
-  }
 }
 
 .clients__img {
+  max-width: 100%;
+  width: auto;
+
+  padding: 10px;
+
+  border-radius: 10px;
+
   object-fit: contain;
 }
