--- a/src/pages/fanzone.pug
+++ b/src/pages/fanzone.pug
@@ -13,7 +13,7 @@ block content
     //Funzone
     section.fanzone
       +titlePage('Manchester United Fanzone', true)
-      img.fanzone__img.lozad.container(data-src="images/fanzone/stadium.jpg", alt="")
+      img.fanzone__img.lozad.container(data-src="images/fanzone/stadium.jpg", alt="Стадион Олд Траффорд")
       .fanzone__txt.container
         p
           span Многие клиенты задаются вопросом, почему наша компания называется  «ОлдТраффорд».  Ответ прост, мы любим футбол и болеем за самый лучший в мире футбольный клуб Manchester United!
