--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -95,7 +95,7 @@ block content
       .container
         .company__inner
           figure.company__img
-            img.lozad(data-src="images/index/company/director.jpg" width="264" height="364" data-placeholder-background="#f1f1f1" alt="")
+            img.lozad(data-src="images/index/company/director.jpg" width="264" height="364" data-placeholder-background="#f1f1f1" alt="Директор компании ОлдТраффорд")
             figcaption
               p Наталья Малиновская
               p Директор ООО &laquo;ОлдТраффорд&raquo;
