fix: swiper version

--- a/src/pages/common/layout.pug
+++ b/src/pages/common/layout.pug
@@ -15,7 +15,10 @@ html(lang="ru")
       link(rel='manifest' href='favicon/site.webmanifest')
       link(rel='mask-icon' href='favicon/safari-pinned-tab.svg' color='#5bbad5')
 
-      link(rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css")
+      link(rel="stylesheet" href="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.css")
+      script(src="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.js")
+
+
       link(rel="stylesheet" href="css/style.min.css")
       link(rel="preload" href="fonts/Museo300.woff2" as="font" crossorigin="anonymous")
       link(rel="preload" href="fonts/Museo500.woff2" as="font" crossorigin="anonymous")
@@ -23,7 +26,6 @@ html(lang="ru")
       link(rel="preload" href="fonts/Trajan600.woff2" as="font" crossorigin="anonymous")
 
       script(src="https://api-maps.yandex.ru/2.1/?apikey=1985392a-85b0-4ba4-9307-1b6d4c094ac8&lang=ru_RU")
-      script(src="https://unpkg.com/swiper/swiper-bundle.min.js")
 
       style.
         .intro {
@@ -51,5 +53,4 @@ html(lang="ru")
       #overlay.overlay
       +callbackBtnFixed
     block scripts
-
       script(src='scripts/main.min.js')
